--- a/CodeBase/WeatherPy.ipynb
+++ b/CodeBase/WeatherPy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 393,
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "635"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "max     78.220000  179.320000   98.370000  100.000000  100.000000   32.210000"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
        "Int64Index([], dtype='int64')"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "Int64Index([], dtype='int64')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
        "4        4.14  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 407,
    "metadata": {
     "scrolled": true
    },
@@ -1249,7 +1249,9 @@
     "\n",
     "\n",
     "_=ax1.set_xlabel('Latitude')\n",
-    "_=ax1.set_ylabel('Max Temperature (F)')\n"
+    "_=ax1.set_ylabel('Max Temperature (F)')\n",
+    "\n",
+    "plt.savefig('../Images/plot1.png')"
    ]
   },
   {
@@ -1291,7 +1293,9 @@
     "\n",
     "\n",
     "_=ax2.set_xlabel('Latitude')\n",
-    "_=ax2.set_ylabel('Humidity (%)')\n"
+    "_=ax2.set_ylabel('Humidity (%)')\n",
+    "\n",
+    "plt.savefig('../Images/plot2.png')\n"
    ]
   },
   {
