Added regression plots

--- a/CodeBase/WeatherPy.ipynb
+++ b/CodeBase/WeatherPy.ipynb
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,9 @@
     "\n",
     "\n",
     "_=ax3.set_xlabel('Latitude')\n",
-    "_=ax3.set_ylabel('Cloudiness (%)')"
+    "_=ax3.set_ylabel('Cloudiness (%)')\n",
+    "\n",
+    "plt.savefig('../Images/plot3.png')"
    ]
   },
   {
@@ -1348,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1379,9 @@
     "\n",
     "\n",
     "_=ax4.set_xlabel('Latitude')\n",
-    "_=ax4.set_ylabel('Wind Speed (mph)')"
+    "_=ax4.set_ylabel('Wind Speed (mph)')\n",
+    "\n",
+    "plt.savefig('../Images/plot4.png')"
    ]
   },
   {
@@ -1389,12 +1393,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [],
    "source": [
     "# OPTIONAL: Create a function to create Linear Regression plots\n",
-    "def linregress_plots(DF, xl, yl, xlabel='Latitude', ylabel='', title=''):\n",
+    "def linregress_plots(DF, xl, yl, xlabel='Latitude', ylabel='', title='', figname='plot.png'):\n",
     "\n",
     "    m, c, r, p, _ = linregress(DF[xl], DF[yl])\n",
     "    print(f\"The r-squared is: {r**2}\")\n",
@@ -1436,7 +1440,9 @@
     "    _=ax.annotate(linear_eqn,\n",
     "            xy=pos, xycoords='figure fraction', fontsize=15, color='r')\n",
     "\n",
+    "    plt.savefig(f\"../Images/{figname}\")\n",
     "    _=plt.show()\n",
+    "    \n",
     "    return(r, p)\n",
     "\n",
     "#This function returns the r value, and p value\n",
@@ -1449,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 465,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 466,
    "metadata": {},
    "outputs": [
     {
@@ -1544,13 +1550,13 @@
        "(-0.7744342540959642, 5.923563163145846e-80)"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 466,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(NHS, 'Lat', 'Max Temp', ylabel='Max Temperature (F)', title=f\"Northern Hemi Sphere: \\nCity Latitude vs. Max Temperature ({utc_date})\")\n"
+    "linregress_plots(NHS, 'Lat', 'Max Temp', ylabel='Max Temperature (F)', title=f\"Northern Hemi Sphere: \\nCity Latitude vs. Max Temperature ({utc_date})\", figname='plot5.png')    \n"
    ]
   },
   {
@@ -1562,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [
     {
@@ -1599,13 +1605,13 @@
        "(0.6319760141160673, 1.4049493681806508e-22)"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 467,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(SHS, 'Lat', 'Max Temp', ylabel='Max Temperature (F)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Max Temperature ({utc_date})\")\n"
+    "linregress_plots(SHS, 'Lat', 'Max Temp', ylabel='Max Temperature (F)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Max Temperature ({utc_date})\", figname='plot6.png')\n"
    ]
   },
   {
@@ -1635,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [
     {
@@ -1672,13 +1678,13 @@
        "(-0.003009843886379778, 0.9525108474813493)"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 468,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(NHS, 'Lat', 'Humidity', ylabel='Humidity (%)', title=f\"Northern Hemi Sphere: \\nCity Latitude vs. Humidity ({utc_date})\")\n"
+    "linregress_plots(NHS, 'Lat', 'Humidity', ylabel='Humidity (%)', title=f\"Northern Hemi Sphere: \\nCity Latitude vs. Humidity ({utc_date})\", figname='plot7.png')\n"
    ]
   },
   {
@@ -1690,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [
     {
@@ -1727,13 +1733,13 @@
        "(0.0013511749141977146, 0.9852385688782551)"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 469,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(SHS, 'Lat', 'Humidity', ylabel='Humidity (%)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Humidity ({utc_date})\")\n"
+    "linregress_plots(SHS, 'Lat', 'Humidity', ylabel='Humidity (%)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Humidity ({utc_date})\", figname='plot8.png')\n"
    ]
   },
   {
@@ -1759,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
@@ -1796,13 +1802,13 @@
        "(0.04814483824770347, 0.3405068458433054)"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(NHS, 'Lat', 'Cloudiness', ylabel='Cloudiness (%)', title=f\"Northern Hemi Sphere: \\nCity Latitude vs. Cloudiness ({utc_date})\")\n"
+    "linregress_plots(NHS, 'Lat', 'Cloudiness', ylabel='Cloudiness (%)', title=f\"Northern Hemi Sphere: \\nCity Latitude vs. Cloudiness ({utc_date})\", figname='plot9.png')\n"
    ]
   },
   {
@@ -1814,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [
     {
@@ -1851,13 +1857,13 @@
        "(-0.11537894540501849, 0.11292255640350812)"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(SHS, 'Lat', 'Cloudiness', ylabel='Cloudiness (%)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Cloudiness ({utc_date})\")\n"
+    "linregress_plots(SHS, 'Lat', 'Cloudiness', ylabel='Cloudiness (%)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Cloudiness ({utc_date})\", figname='plot10.png')\n"
    ]
   },
   {
@@ -1882,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [
     {
@@ -1919,13 +1925,13 @@
        "(0.05624443201327813, 0.2653843933638419)"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 472,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(NHS, 'Lat', 'Wind Speed', ylabel='Wind Speed (mph)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Wind Speed ({utc_date})\")\n"
+    "linregress_plots(NHS, 'Lat', 'Wind Speed', ylabel='Wind Speed (mph)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Wind Speed ({utc_date})\", figname='plot11.png')\n"
    ]
   },
   {
@@ -1937,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [
     {
@@ -1974,13 +1980,13 @@
        "(-0.1354582157919655, 0.06240047742985058)"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 473,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linregress_plots(SHS, 'Lat', 'Wind Speed', ylabel='Wind Speed (mph)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Wind Speed ({utc_date})\")\n"
+    "linregress_plots(SHS, 'Lat', 'Wind Speed', ylabel='Wind Speed (mph)', title=f\"Southern Hemi Sphere: \\nCity Latitude vs. Wind Speed ({utc_date})\", figname='plot12.png')\n"
    ]
   },
   {
