--- a/CodeBase/WeatherPy.ipynb
+++ b/CodeBase/WeatherPy.ipynb
@@ -1747,7 +1747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Humidity(%) doesn't depend on the distance from equator. \n",
+    "* Humidity(%) doesn't correlate with the distance from equator. \n",
     "    * Please observe that p value of the linear regression estimator >> 0 (>significance level(typically 0.05)). This means that WE CANNOT say that slope is NOT zero.\n",
     "    * In both hemispheres, a near to ZERO correlation between latitude and humidity.\n",
     "    * No pattern in scatter plot.\n",
@@ -1870,7 +1870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Cloudiness(%) doesn't depend on the distance from equator. \n",
+    "* Cloudiness(%) doesn't correlate with the distance from equator. \n",
     "    * Please observe that p value of the linear regression estimator > significance level (typically 0.05). This means that WE CANNOT say that slope is NOT zero.\n",
     "    * In both hemispheres, a weak correlation between latitude and cloudiness.\n",
     "    * No pattern in scatter plot.\n",
@@ -1993,7 +1993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Windspeed doesn't depend on the distance from equator. \n",
+    "* Windspeed doesn't correlate with the distance from equator. \n",
     "    * Please observe that p value of the linear regression estimator > significance level (typically 0.05).\n",
     "        This means that WE CANNOT say that slope is NOT zero.\n",
     "    * In both hemispheres, a weak correlation between latitude and Windspeed.\n",
