--- a/CodeBase/VacationPy.ipynb
+++ b/CodeBase/VacationPy.ipynb
@@ -4,16 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VacationPy\n",
-    "----\n",
-    "\n",
-    "#### Note\n",
-    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+    "# VacationPy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +35,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "DF = pd.read_csv('../Output/cleaned_cities_weather.csv', encoding='utf-8')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 584 entries, 0 to 583\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   City        584 non-null    object \n",
+      " 1   Country     579 non-null    object \n",
+      " 2   Lat         584 non-null    float64\n",
+      " 3   Lng         584 non-null    float64\n",
+      " 4   Max Temp    584 non-null    float64\n",
+      " 5   Humidity    584 non-null    float64\n",
+      " 6   Cloudiness  584 non-null    float64\n",
+      " 7   Wind Speed  584 non-null    float64\n",
+      "dtypes: float64(6), object(2)\n",
+      "memory usage: 36.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "DF.info()"
    ]
   },
   {
@@ -58,17 +85,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gmaps.configure(api_key=g_key)\n",
+    "layout = {\n",
+    "    'width': '1000px',\n",
+    "    'height': '1000px',\n",
+    "    'border': '1px solid black',\n",
+    "    'padding': '0px',\n",
+    "    'margin': '0 auto 0 auto'\n",
+    "}\n",
+    "Map = gmaps.figure(center=(0, 0), zoom_level=2, layout=layout)\n",
+    "heatmap_layer = gmaps.WeightedHeatmap(locations = DF[['Lat', 'Lng']], weights=DF['Humidity'], max_intensity=DF['Humidity'].max())\n",
+    "Map.add_layer(heatmap_layer)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ipywidgets.embed import embed_minimal_html\n",
+    "embed_minimal_html('heatmap.html', views=[Map], title='heatmap')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "985b22b54ed8405fb739255fec567041",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(border='1px solid black', height='1000px', margin='0 auto 0 auto', padding='0px', w…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Map"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,9 +223,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -171,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
