--- a/CodeBase/VacationPy.ipynb
+++ b/CodeBase/VacationPy.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
     "    'height': '1000px',\n",
     "    'border': '1px solid black',\n",
     "    'padding': '0px',\n",
-    "    'margin': '0 auto 0 auto'\n",
+    "    'margin': '0'\n",
     "}\n",
     "Map = gmaps.figure(center=(0, 0), zoom_level=2, layout=layout)\n",
     "heatmap_layer = gmaps.WeightedHeatmap(locations = DF[['Lat', 'Lng']], weights=DF['Humidity'], max_intensity=DF['Humidity'].max())\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,18 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "985b22b54ed8405fb739255fec567041",
+       "model_id": "99d7b7c9457448ff86eac8095041158a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Figure(layout=FigureLayout(border='1px solid black', height='1000px', margin='0 auto 0 auto', padding='0px', w…"
+       "Figure(layout=FigureLayout(border='1px solid black', height='1000px', margin='0', padding='0px', width='1000px…"
       ]
      },
      "metadata": {},
