--- a/CodeBase/VacationPy.ipynb
+++ b/CodeBase/VacationPy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99d7b7c9457448ff86eac8095041158a",
+       "model_id": "122d1410a6d1475abf132b381ed1bb8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +150,7 @@
     "\n",
     "**Ideal Weather Conditions**\n",
     "\n",
-    "* A max temperature lower than 80 Fahrenheit but higher than 70 Fahrenheit.\n",
+    "* A max temperature lower than 80 Fahrenheit but higher than 72 Fahrenheit.\n",
     "\n",
     "* Wind speed less than 10 mph.\n",
     "\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -169,25 +169,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 14 entries, 25 to 536\n",
+      "Int64Index: 9 entries, 37 to 536\n",
       "Data columns (total 8 columns):\n",
       " #   Column      Non-Null Count  Dtype  \n",
       "---  ------      --------------  -----  \n",
-      " 0   City        14 non-null     object \n",
-      " 1   Country     14 non-null     object \n",
-      " 2   Lat         14 non-null     float64\n",
-      " 3   Lng         14 non-null     float64\n",
-      " 4   Max Temp    14 non-null     float64\n",
-      " 5   Humidity    14 non-null     float64\n",
-      " 6   Cloudiness  14 non-null     float64\n",
-      " 7   Wind Speed  14 non-null     float64\n",
+      " 0   City        9 non-null      object \n",
+      " 1   Country     9 non-null      object \n",
+      " 2   Lat         9 non-null      float64\n",
+      " 3   Lng         9 non-null      float64\n",
+      " 4   Max Temp    9 non-null      float64\n",
+      " 5   Humidity    9 non-null      float64\n",
+      " 6   Cloudiness  9 non-null      float64\n",
+      " 7   Wind Speed  9 non-null      float64\n",
       "dtypes: float64(6), object(2)\n",
-      "memory usage: 1008.0+ bytes\n"
+      "memory usage: 648.0+ bytes\n"
      ]
     }
    ],
    "source": [
-    "DF_IDEAL = DF.drop(DF[~((DF['Max Temp']<80.0) & (DF['Max Temp']>70.0) & (DF['Wind Speed']<10.0) & (DF['Cloudiness']==0))].index)\n",
+    "DF_IDEAL = DF.drop(DF[~((DF['Max Temp']<80.0) & (DF['Max Temp']>72.0) & (DF['Wind Speed']<10.0) & (DF['Cloudiness']==0))].index)\n",
     "\n",
     "DF_IDEAL.info()"
    ]
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -269,14 +269,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Maţāy</td>\n",
-       "      <td>EG</td>\n",
-       "      <td>28.42</td>\n",
-       "      <td>30.78</td>\n",
-       "      <td>ABO GHANIMA HOME</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>São Domingos do Maranhão</td>\n",
        "      <td>BR</td>\n",
@@ -290,7 +282,7 @@
        "      <td>CV</td>\n",
        "      <td>14.90</td>\n",
        "      <td>-24.50</td>\n",
-       "      <td>Hotel Xaguate</td>\n",
+       "      <td>Hotel Miramar Fogo Brava</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60</th>\n",
@@ -301,20 +293,12 @@
        "      <td>Gostevoy Dom Vista</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>Tiznit Province</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>29.58</td>\n",
-       "      <td>-9.50</td>\n",
-       "      <td>Hotel kerdous</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>113</th>\n",
        "      <td>Cherskiy</td>\n",
        "      <td>RU</td>\n",
        "      <td>68.75</td>\n",
        "      <td>161.30</td>\n",
-       "      <td>Super 8 by Wyndham Austin/Airport North</td>\n",
+       "      <td>Days Inn by Wyndham Toronto East Lakeview</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>144</th>\n",
@@ -323,22 +307,6 @@
        "      <td>-6.20</td>\n",
        "      <td>-42.14</td>\n",
        "      <td>Pousada Rodeio</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>Amga</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>60.90</td>\n",
-       "      <td>131.96</td>\n",
-       "      <td>Algys</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>Diamantino</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>-14.41</td>\n",
-       "      <td>-56.45</td>\n",
-       "      <td>KAYABI PALACE HOTEL E RESTAURANTE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>241</th>\n",
@@ -365,14 +333,6 @@
        "      <td>Serpa Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>417</th>\n",
-       "      <td>Yangi Marg`ilon</td>\n",
-       "      <td>UZ</td>\n",
-       "      <td>40.43</td>\n",
-       "      <td>71.72</td>\n",
-       "      <td>Voyage Hotel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>536</th>\n",
        "      <td>Zhob</td>\n",
        "      <td>PK</td>\n",
@@ -386,39 +346,29 @@
       ],
       "text/plain": [
        "                         City Country    Lat     Lng  \\\n",
-       "25                      Maţāy      EG  28.42   30.78   \n",
        "37   São Domingos do Maranhão      BR  -5.58  -44.39   \n",
        "51                 São Filipe      CV  14.90  -24.50   \n",
        "60                   Kurumkan      RU  54.30  110.30   \n",
-       "70            Tiznit Province      MA  29.58   -9.50   \n",
        "113                  Cherskiy      RU  68.75  161.30   \n",
        "144            Elesbão Veloso      BR  -6.20  -42.14   \n",
-       "149                      Amga      RU  60.90  131.96   \n",
-       "201                Diamantino      BR -14.41  -56.45   \n",
        "241              Verkh-Usugli      RU  52.70  115.17   \n",
        "242               San Lorenzo      PY -25.33  -57.53   \n",
        "268               Itacoatiara      BR  -3.14  -58.44   \n",
-       "417           Yangi Marg`ilon      UZ  40.43   71.72   \n",
        "536                      Zhob      PK  31.34   69.45   \n",
        "\n",
-       "                                  Hotel Name  \n",
-       "25                          ABO GHANIMA HOME  \n",
-       "37                            Pousada Pontes  \n",
-       "51                             Hotel Xaguate  \n",
-       "60                        Gostevoy Dom Vista  \n",
-       "70                             Hotel kerdous  \n",
-       "113  Super 8 by Wyndham Austin/Airport North  \n",
-       "144                           Pousada Rodeio  \n",
-       "149                                    Algys  \n",
-       "201        KAYABI PALACE HOTEL E RESTAURANTE  \n",
-       "241                Gostinitsa \"Aleksandriya\"  \n",
-       "242                  Sheraton Asuncion Hotel  \n",
-       "268                              Serpa Hotel  \n",
-       "417                             Voyage Hotel  \n",
-       "536                        Rohail hotel Zhob  "
+       "                                    Hotel Name  \n",
+       "37                              Pousada Pontes  \n",
+       "51                    Hotel Miramar Fogo Brava  \n",
+       "60                          Gostevoy Dom Vista  \n",
+       "113  Days Inn by Wyndham Toronto East Lakeview  \n",
+       "144                             Pousada Rodeio  \n",
+       "241                  Gostinitsa \"Aleksandriya\"  \n",
+       "242                    Sheraton Asuncion Hotel  \n",
+       "268                                Serpa Hotel  \n",
+       "536                          Rohail hotel Zhob  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 155,
    "metadata": {
     "scrolled": true
    },
@@ -459,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99d7b7c9457448ff86eac8095041158a",
+       "model_id": "122d1410a6d1475abf132b381ed1bb8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,6 +432,13 @@
     "# Display figure\n",
     "Map"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
